syntax = "proto3";

package nekzabirov.igambling.v1;

import "google/protobuf/empty.proto";
import "dto/platformType.dto.proto";

option java_package = "com.nekzabirov.igambling.proto.dto";
option java_multiple_files = true;

message GameVariantDto {
  string id = 1;
  
  string game_id = 2;
  
  string symbol = 3;
  
  string name = 4;
  
  string provider_name = 5;
  
  string aggregator = 6;
  
  int32 play_lines = 7;
  
  bool free_spin_enable = 8;
  
  bool free_chip_enable = 9;
  
  bool jackpot_enable = 10;
  
  bool demo_enable = 11;
  
  bool bonus_buy_enable = 12;
  
  repeated string locales = 13;
  
  repeated PlatformType platforms = 14;
}
