syntax = "proto3";

package nekzabirov.igambling.v1;

option java_package = "com.nekzabirov.igambling.proto.service";
option java_multiple_files = true;

import "dto/platformType.dto.proto";

service Session {
  rpc OpenSession (OpenSessionCommand) returns (OpenSessionResult);
}

message OpenSessionCommand {
  string game_identity = 1;

  string player_id = 2;

  string currency = 3;

  string locale = 4;

  PlatformType platform = 5;

  string lobby_url = 6;
}

message OpenSessionResult {
  string launch_url = 1;
}